<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsTitle"
            android:textSize="30dp"
            android:layout_gravity="right"
            android:id="@+id/tvSettingsTitle" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:layout_gravity="left"
                    android:id="@+id/spinner" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="right"
                    android:text="@string/city"
                    android:textSize="20dp"
                    android:id="@+id/text_view_city"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:layout_gravity="left"
                    android:id="@+id/spinner_sort" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="right"
                    android:text="@string/sort"
                    android:textSize="20dp"
                    android:id="@+id/text_view_sort"/>

            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp">
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:layout_gravity="left"
                    android:id="@+id/switch_share" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="right"
                    android:text="@string/share"
                    android:textSize="20dp"
                    android:id="@+id/text_view_share"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:layout_gravity="left"
                    android:text="@string/retrieval2"
                    android:textSize="20dp"
                    android:id="@+id/text_view_retrieval2"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_gravity="left"
                    android:id="@+id/spinner_retrieval" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="right"
                    android:text="@string/retrieval"
                    android:textSize="20dp"
                    android:id="@+id/text_view_retrieval1"/>

            </LinearLayout>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:text="@string/deleteAll"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/add_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/save_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="openAddApartment"
            app:fabSize="normal"
            />

</RelativeLayout>